--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -31,6 +31,7 @@ spec:
             - containerPort: 80
               name: server
               protocol: TCP
+          imagePullPolicy: Always
 ---
 
 apiVersion: v1
@@ -40,8 +41,7 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
-      protocol: TCP
+    - port: 8082
       targetPort: server
   selector:
     app: comments-ms
