--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -2,7 +2,7 @@ name: Build with dotnet and package as Docker container
 
 on:
   push:
-    branches: [main]
+    branches: [main, 28-logging]
   pull_request:
     branches: [main]
     
