--- a/src/Comments.API/appsettings.Development.json
+++ b/src/Comments.API/appsettings.Development.json
@@ -5,5 +5,17 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Network" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "TCPSink",
+        "Args": { "uri": "tls://e3d28c30-0c70-4ee8-8f27-8d25899f790d-ls.logit.io:21064" }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
