--- a/src/Comments.API/appsettings.json
+++ b/src/Comments.API/appsettings.json
@@ -16,6 +16,9 @@
         "Args": { "uri": "tls://e3d28c30-0c70-4ee8-8f27-8d25899f790d-ls.logit.io:21064" }
       }
     ],
-    "Enrich": [ "FromLogContext" ]
+    "Enrich": [ "FromLogContext", "WithHttpRequestId" ],
+    "Properties": {
+      "Application": "Comments MS"
+    }
   }
 }
