--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -2,7 +2,7 @@ name: Build with dotnet and package as Docker container
 
 on:
   push:
-    branches: [main, 28-logging]
+    branches: [main]
   pull_request:
     branches: [main]
     
@@ -28,4 +28,4 @@ jobs:
       with:
         file: ./src/Dockerfile
         push: true
-        tags: anzx10/comments-microservice:v3.0
+        tags: anzx10/comments-microservice:v4.0
