--- a/src/Comments.API/Comments.API.csproj
+++ b/src/Comments.API/Comments.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>6e9dbd6c-8b3f-4305-8822-36d6cd1ed2cb</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
